Update footer link to My Portfolio

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
 <footer>
   Created by 
-  <a href="https://pandeyujjwal975.github.io/" target="_blank">
+  <a href="https://pandeyujjwal975.github.io/My-Portfolio/" target="_blank">
     Ujjwal Pandey
   </a>
 </footer>
